🔧 chore: rename project
