# internal/infra/webserver/handlers/product_handler.go
@@ -8,10 +8,10 @@ import (
 
 	"github.com/go-chi/chi/v5"
 	"github.com/google/uuid"
-	"github.com/rosset7i/zippy/internal/dto"
-	"github.com/rosset7i/zippy/internal/entity"
-	"github.com/rosset7i/zippy/internal/infra/database"
-	"github.com/rosset7i/zippy/internal/infra/webserver"
+	"github.com/rosset7i/product_crud/internal/dto"
+	"github.com/rosset7i/product_crud/internal/entity"
+	"github.com/rosset7i/product_crud/internal/infra/database"
+	"github.com/rosset7i/product_crud/internal/infra/webserver"
 )
 
 type ProductHandler struct {
